[workspace]
members = [
  "daemon",
  "data",
  "e2e",
  "git-ext",
  "git-helpers",
  "git-trailers",
  "librad",
  "link-async",
  "link-canonical",
  "link-canonical-derive",
  "link-crypto",
  "link-git-protocol",
  "link-identities",
  "macros",
  "node-lib",
  "rad-clib",
  "rad-exe",
  "rad-identities",
  "rad-profile",
  "std-ext",
  "test",
]
exclude = [
  "bins"
]

[patch.crates-io.git2]
git = "https://github.com/radicle-dev/git2-rs.git"
rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"

[patch.crates-io.libgit2-sys]
git = "https://github.com/radicle-dev/git2-rs.git"
rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"
