[workspace]
members = [
  "cob",
  "daemon",
  "data",
  "e2e",
  "git-ext",
  "git-helpers",
  "git-trailers",
  "librad",
  "link-async",
  "link-canonical",
  "link-canonical-derive",
  "link-crypto",
  "link-git",
  "link-identities",
  "link-replication",
  "link-tracking",
  "macros",
  "node-lib",
  "rad-clib",
  "rad-exe",
  "rad-identities",
  "rad-profile",
  "std-ext",
  "test",
]
exclude = [
  "bins"
]

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"
