[workspace]
members = [
  "cob",
  "data",
  "e2e",
  "git-ext",
  "git-helpers",
  "git-ref-format",
  "git-trailers",
  "librad",
  "link-async",
  "link-canonical",
  "link-canonical-derive",
  "link-crypto",
  "link-git",
  "link-identities",
  "link-replication",
  "link-tracking",
  "macros",
  "cli/gitd-lib",
  "cli/linkd-lib",
  "cli/lnk-clib",
  "cli/lnk-exe",
  "cli/lnk-identities",
  "cli/lnk-profile",
  "std-ext",
  "test",
]
exclude = [
  "bins",
]
