[package]
name = "cob"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>", "The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]

[dependencies]
petgraph = "0.5"
regex = "1.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
either = ">= 1.3, 1"
lru = "0.6.6"
multihash = "0.11"
multibase = "0.9"
lazy_static = "1.4.0"
tempfile = "3.1"

[dependencies.minicbor]
version = "0.9.1"
features = ["std", "derive"]

[dependencies.git2]
version = ">= 0.13.23, 0.13"
default-features = false
features = ["vendored-libgit2"]

[dependencies.jsonschema]
version = ">= 0.13.2"
default-features = false
features = []

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.link-identities]
path = "../link-identities"

[dependencies.git-trailers]
path = "../git-trailers"

[dependencies.radicle-git-ext]
path = "../git-ext"

[dependencies.automerge]
git = "https://github.com/automerge/automerge-rs.git"
rev = "e72571962b51c2f0726fb534890ef3b4f7c74dfc"


[dev-dependencies]
rand = "0.8"
env_logger = "0"
