[package]
name = "cob"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>", "The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[dependencies]
petgraph = "0.5"
regex = "1.5.5"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
either = "1.6"
multihash = "0.11"
multibase = "0.9"
lazy_static = "1.4"
tempfile = "3.3"

[dependencies.minicbor]
version = "0.13"
features = ["std", "derive"]

[dependencies.git2]
version = "0.13.24"
default-features = false
features = ["vendored-libgit2"]

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.link-identities]
path = "../link-identities"

[dependencies.git-trailers]
path = "../git-trailers"

[dependencies.radicle-git-ext]
path = "../git-ext"
