[package]
name = "radicle-copy"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
test = false

[dependencies]
anyhow = "1"
argh = "0.1"
either = "1.3"
librad = { path = "../librad" }
nonempty = "0.6"
radicle-git-ext = { path = "../git-ext" }
radicle-keystore = "0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.git2]
version = ">= 0.13.12, 0.13"
default-features = false
features = []

[dependencies.serde]
version = "1.0"
features = ["derive"]
