[package]
name = "radicle-daemon"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Radicle Team <dev@radicle.xyz>"]
edition = "2018"

[dependencies]
async-stream = "0.3"
either = "1.6"
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
log = "0.4"
nonempty = "0.6"
radicle-keystore = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_millis = "0.1"
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "net", "rt-multi-thread", "sync", "time" ] }

[dependencies.git2]
version = "0.13"
default-features = false
features = []

[dependencies.kv]
version = "0.22"
features = [ "json-value" ]

[dependencies.librad]
path = "../librad"

[dependencies.radicle-git-ext]
path = "../git-ext"

[dependencies.radicle-git-helpers]
path = "../git-helpers"

[dev-dependencies]
assert_matches = "1.3"
pretty_assertions = "0.6"
pretty_env_logger = "0.3"
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.1"