[package]
name = "radicle-daemon"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Radicle Team <dev@radicle.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.0"
async-stream = "0.3"
either = "1.6"
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
tracing = "0.1"
nonempty = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_millis = "0.1"
thiserror = "1.0"

[dependencies.git2]
version = "0.13"
default-features = false
features = []

[dependencies.kv]
version = "0.22"
features = [ "json-value" ]

[dependencies.librad]
path = "../librad"

[dependencies.radicle-git-ext]
path = "../git-ext"

[dependencies.radicle-git-helpers]
path = "../git-helpers"

[dependencies.tokio]
version = "1.13.1"
features = [ "macros", "net", "rt-multi-thread", "sync", "time" ]

[dev-dependencies]
assert_matches = "1.3"
pretty_assertions = "1"
tempfile = "3.1"
url = "2.1"
