[package]
name = "radicle-data"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
nonempty = "0.6"

[dependencies.minicbor]
version = ">= 0.6, 0"
features = ["std"]
optional = true

[dependencies.serde]
version = "1.0"
optional = true
