[package]
name = "radicle-data"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = true
test = false

[dependencies]
nonempty = "0.6"
thiserror = "1.0"
typenum = "1.13"

[dependencies.minicbor]
version = "0.9.1"
features = ["std"]
optional = true

[dependencies.serde]
version = "1.0"
optional = true
