[package]
name = "radicle-link-e2e"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[[bin]]
name = "ephemeral-peer"
doctest = false
test = false

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1"
argh = "0"
base64 = "0.13"
dashmap = "4.0"
env_logger = "0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
rustc-hash = "1.1"
signal-hook = "0.3.9"
tempfile = "3.3"
thiserror = "1"
tracing = "0.1"

[dependencies.librad]
path = "../librad"

[dependencies.radicle-std-ext]
path = "../std-ext"

[dependencies.tokio]
version = "1.13"
features = ["rt-multi-thread", "macros"]

[dependencies.tracing-subscriber]
version = "0.3.0"
features = ["std", "env-filter", "fmt", "json"]
