[package]
name = "radicle-git-ext"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Utilities and extensions to the git2 crate"

[dependencies]
multibase = "0.9"
multihash = "0.11"
percent-encoding = "2"
thiserror = "1"

[dependencies.git2]
version = ">= 0.13.12, 0.13"
default-features = false
features = []

[dependencies.minicbor]
version = ">= 0.6, 0"
features = ["std"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.radicle-std-ext]
path = "../std-ext"
