[package]
name = "radicle-git-helpers"
description = "Git helpers for radicle-link"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1"

[dependencies.librad]
path = "../librad"

[dependencies.git2]
version = ">= 0.13.23"
default-features = false
features = ["vendored-libgit2"]

[dependencies.libgit2-sys]
version = ">= 0.12.24"
default-features = false
features = ["vendored"]
