[package]
name = "librad"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = true
test = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
backoff = "0.3"
blocking = "1.0.2"
bytes = "0.5"
dashmap = "4.0"
directories = "3.0"
dyn-clone = "1.0"
futures-timer = "3.0"
globset = "0.4"
governor = ">=0.3.2"
if-watch = "0.2"
indexmap = "1.6"
itertools = "0.10.0"
lazy_static = "1"
libc = "0.2"
multibase = "0.9"
multihash = "0.11"
nom = "5"
nonempty = "0.6"
notify = "4.0.17"
nonzero_ext = "0.2"
num_cpus = "1"
parking_lot = "0.11"
percent-encoding = "2"
picky-asn1 = "0.3.2"
picky-asn1-der = "0.2.5"
picky-asn1-x509 = "0.6.0"
priority-queue = "1.0"
rand = "0.7"
rand_pcg = "0.2"
regex = "1.3"
rustc-hash = "1.1"
serde_bytes = "0.11"
serde_json = "1.0"
sized-vec = "0.3"
socket2 = "0.4"
tempfile = "3.1"
thiserror = "1.0"
time = "0.2"
tracing = "0.1"
tracing-attributes = "<0.12.0, ^0.1.13"
typenum = "1.13"
uuid = { version = "0.8", features = ["v4"] }
webpki = "0.21"
xorf = "0.7"

[dependencies.deadpool]
version = "0.7"
default-features = false
features = ["managed"]

[dependencies.either]
version = ">= 1.3, 1"
features = ["serde"]

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[dependencies.futures_codec]
version = "0.4"
features = []

[dependencies.git2]
version = "=0.13.20"
default-features = false
features = []

[dependencies.libgit2-sys]
version = "0.12"
default-features = false
features = []

[dependencies.minicbor]
version = "0.9.1"
features = ["std", "derive"]

[dependencies.quinn]
version = "0.7"
default-features = false
features = ["tls-rustls"]

[dependencies.link-canonical]
path = "../link-canonical"

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.link-identities]
path = "../link-identities"

[dependencies.radicle-data]
path = "../data"
features = ["minicbor"]

[dependencies.radicle-git-ext]
path = "../git-ext"
features = ["serde", "minicbor"]

[dependencies.radicle-macros]
path = "../macros"

[dependencies.radicle-std-ext]
path = "../std-ext"

# Note: this MUST always match the exact patch version `quinn` uses
[dependencies.rustls]
version  = "0.19"
features = ["logging", "dangerous_configuration"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.1"
features = ["rt-multi-thread", "process", "net", "time"]

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dependencies.url]
version = "2.1"
features = ["serde"]
