[package]
name = "librad"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[features]
default = []
replication-v3 = []

[dependencies]
async-lock = "2.4.0"
async-stream = "0.3"
async-trait = "0.1"
backoff = "0.3"
blocking = "1.0.2"
bloom-filters = "0.1.2"
bstr = "0.2"
bytes = "0.5"
dashmap = "4.0"
directories = "3.0"
futures = "0.3"
futures_codec = "0.4"
globset = "0.4"
governor = "0.3.2"
if-watch = "0.2"
indexmap = "1.6"
itertools = "0.10.0"
lazy_static = "1.4"
libc = "0.2"
multibase = "0.9"
multihash = "0.11"
nom = "7.1"
nonempty = "0.7"
notify = "4.0.17"
nonzero_ext = "0.3"
num_cpus = "1"
once_cell = "1.10"
parking_lot = "0.12"
percent-encoding = "2"
picky-asn1 = "0.3.2"
picky-asn1-der = "0.2.5"
picky-asn1-x509 = "0.6.0"
rand = "0.8"
rand_pcg = "0.3.1"
regex = "1.3"
rustc-hash = "1.1"
serde_bytes = "0.11"
serde_json = "1.0"
sized-vec = "0.3"
socket2 = "0.4"
tempfile = "3.3"
thiserror = "1.0"
time = "0.3"
toml = "0.5"
tracing = "0.1"
tracing-attributes = "<0.12.0, ^0.1.13"
typenum = "1.13"
uuid = { version = "0.8", features = ["v4", "serde"] }
webpki = "0.21"
xorf = "0.7"

[dependencies.deadpool]
version = "0.7"
default-features = false
features = ["managed"]

[dependencies.either]
version = "1.6"
features = ["serde"]

[dependencies.git2]
version = "0.13.24"
default-features = false
features = ["vendored-libgit2"]

[dependencies.libgit2-sys]
version = ">= 0.12.24"
default-features = false
features = ["vendored"]

[dependencies.minicbor]
version = "0.13"
features = ["std", "derive"]

[dependencies.quinn]
version = "0.7"
default-features = false
features = ["tls-rustls"]

[dependencies.link-async]
path = "../link-async"

[dependencies.link-canonical]
path = "../link-canonical"

[dependencies.link-crypto]
path = "../link-crypto"
features = ["git-ref-format"]

[dependencies.link-git]
path = "../link-git"
features = ["git2"]

[dependencies.link-identities]
path = "../link-identities"

[dependencies.link-replication]
path = "../link-replication"

[dependencies.link-tracking]
path = "../link-tracking"

[dependencies.radicle-data]
path = "../data"
features = ["minicbor"]

[dependencies.radicle-git-ext]
path = "../git-ext"
features = ["serde", "minicbor", "link-git"]

[dependencies.git-ref-format]
path = "../git-ref-format"

[dependencies.git-trailers]
path = "../git-trailers"

[dependencies.radicle-macros]
path = "../macros"

[dependencies.radicle-std-ext]
path = "../std-ext"

# Note: this MUST always match the exact patch version `quinn` uses
[dependencies.rustls]
version  = "0.19"
features = ["logging", "dangerous_configuration"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.13"
features = ["rt-multi-thread", "net", "time"]

[dependencies.url]
version = "2.2"
features = ["serde"]

[dependencies.cob]
path = "../cob"
