[package]
name = "librad2"
version = "0.1.0"
authors = ["Monadic <team@monadic.xyz>"]
edition = "2018"

[dependencies]
bs58 = "0.3"
directories = "2.0"
failure = "0.1"
nettle = { version = "5.0", features = ["vendored"]  }
secstr = "0.3"
sequoia-openpgp = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
sha2 = "0.8"
sodiumoxide = "0.2"
tempfile = "3.1"
time = "0.1"
