[package]
name = "link-async"
version = "0.1.0"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[features]
default = []
nightly = []

[dependencies]
blocking = "1.0"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.radicle-std-ext]
path = "../std-ext"

[dependencies.tokio]
version = "1.13"
features = ["net", "rt", "time"]
