[package]
name = "link-cbor"
version = "0.1.0"
authors = ["Fintan Halpenny fintan.halpenny@gmail.com"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = true
test = false

[dependencies]
url = "2.1"
minicbor = "0.9.1"
serde_json = "1.0"

[dependencies.link-canonical]
path = "../link-canonical"