[package]
name = "link-git-protocol"
version = "0.1.0"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"

description = "radicle-link-flavoured git protocol-v2 client and server"

[lib]
doctest = false
test = false

[dependencies]
async-process = "1.1.0"
async-trait = "0.1"
blocking = "1.0.2"
bstr = "0.2.16"
futures-lite = "1.12.0"
futures-util = "0.3.15"
once_cell = "1.8.0"
pin-project = "1.0.7"
tempfile = "3.2.0"
versions = "3.0.2"

[dependencies.git-repository]
version = "0.9.1"
features = [ "async-network-client", "unstable" ]

[dependencies.git-packetline]
version = "0.10.0"
features = ["async-io"]

[dependencies.git2]
version = "=0.13.20"
default-features = false
features = []
optional = true
