[package]
name = "link-git"
version = "0.1.0"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"

description = "Core git types and functionality"

[lib]
doctest = false
test = false

[dependencies]
arc-swap = "1.4.0"
async-process = "1.1.0"
async-trait = "0.1"
blocking = "1.0.2"
bstr = "0.2.16"
futures-lite = "1.12.0"
futures-util = "0.3.15"
im = "15.0.0"
once_cell = "1.8.0"
parking_lot = "0.11.2"
pin-project = "1.0.7"
rustc-hash = "1.1.0"
tempfile = "3.2.0"
thiserror = "1.0.30"
tracing = "0.1"
versions = "3.0.2"

# gitoxide
git-actor = "^0.7.0"
git-hash = "^0.8.0"
git-lock = "^1.0.1"
git-object = "^0.16.0"
git-odb = "^0.25.0"
git-ref = "^0.10.0"
git-traverse = "^0.11.0"

[dependencies.git-features]
version = "^0.18.0"
features = ["progress", "parallel", "zlib-ng-compat"]

[dependencies.git-pack]
version = "^0.15.0"
features = ["object-cache-dynamic", "pack-cache-lru-static", "pack-cache-lru-dynamic"]

[dependencies.git-packetline]
version = "^0.12.0"
features = ["async-io"]

[dependencies.git-protocol]
version = "^0.13.0"
features = ["async-client"]

# compat
[dependencies.git2]
version = "=0.13.20"
default-features = false
features = []
optional = true
