[package]
name = "link-identities"
version = "0.1.0"
authors = [
    "Kim Altintop <kim@eagain.st>",
    "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = true
test = false

[dependencies]
futures-lite = "1.12.0"
lazy_static = "1"
multibase = "0.9"
multihash = "0.11"
percent-encoding = "2"
serde = "1"
serde_json = "1.0"
sized-vec = "0.3"
thiserror = "1.0"
tracing = "0.1"
typenum = "1.13"
xorf = "0.7"

[dependencies.either]
version = ">= 1.3, 1"
features = ["serde"]

[dependencies.git2]
version = ">= 0.13.23"
default-features = false
features = ["vendored-libgit2"]

[dependencies.git-trailers]
path = "../git-trailers"

[dependencies.link-canonical]
path = "../link-canonical"

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.minicbor]
version = "0.9.1"
features = ["std", "derive"]

[dependencies.radicle-data]
path = "../data"
features = ["serde", "minicbor"]

[dependencies.radicle-git-ext]
path = "../git-ext"
features = ["serde", "minicbor"]

[dependencies.radicle-macros]
path = "../macros"

[dependencies.radicle-std-ext]
path = "../std-ext"

[dependencies.url]
version = "2.1"
features = ["serde"]
