[package]
name = "link-replication"
version = "0.1.0"
authors = [
    "Kim Altintop <kim@eagain.st>",
    "Fintan Halpenny <fintan.halpenny@gmail.com>"
]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[dependencies]
async-trait = "0.1"
blocking = "1.0.2"
bstr = "0.2.16"
either = ">= 1.3, 1"
futures-lite = "1.12.0"
itertools = "0.10.0"
parking_lot = "0.11"
rand = "0.7"
thiserror = "1.0"
tracing = "0.1"

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.link-git]
path = "../link-git"
features = ["git2"]

[dependencies.radicle-data]
path = "../data"

[dependencies.radicle-std-ext]
path = "../std-ext"
