[package]
name = "link-tracking"
version = "0.1.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[dependencies]
either = "1.6"
multihash = "0.11"
thiserror = "1.0"
tracing = "0.1"

[dependencies.git-ref-format]
path = "../git-ref-format"
features = ["macro"]

[dependencies.link-canonical]
path = "../link-canonical"
features = [ "derive" ]

[dependencies.cob]
path = "../cob"

[dependencies.link-crypto]
path = "../link-crypto"
features = ["git-ref-format"]

[dependencies.link-identities]
path = "../link-identities"
features = ["git-ref-format"]

[dependencies.radicle-git-ext]
path = "../git-ext"
