[package]
name    = "node-lib"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
authors = [
  "xla <self@xla.is>",
]

[lib]
doctest = true
test    = false

[dependencies]
anyhow              = "1.0"
bytes               = "0.5"
async-compat        = "0.2.1"
async-trait         = "0.1"
base64              = "0.13"
env_logger          = "0.9"
futures             = "0.3"
lazy_static         = "1.4"
log                 = "0.4"
nix                 = "0.23"
rand                = "0.8"
thiserror           = "1.0"
tempfile            = "3.2"
tokio               = { version = "1.10", default-features = false, features = [ "fs", "io-std", "macros", "process", "rt-multi-thread", "signal" ] }
tracing             = { version = "0.1", default-features = false, features = [ "attributes", "std" ] }

[dependencies.clap]
version = "3"
features = [ "derive" ]

[dependencies.librad]
path    = "../librad"
version = "0.1.0"

[dependencies.link-async]
path = "../link-async"

[dependencies.minicbor]
version = ">= 0.9.1, < 0.14"
features = ["std", "derive"]

[dependencies.lnk-clib]
path    = "../cli/lnk-clib"
version = "0.1.0"

[dependencies.radicle-macros]
path = "../macros"

[dependencies.thrussh-agent]
git       = "https://github.com/FintanH/thrussh"
features  = [ "tokio-agent" ]
branch    = "generic-agent"

[dependencies.tracing-subscriber]
version = "0.3.0"
features = ["std", "env-filter", "fmt", "json"]

[dependencies.radicle-git-ext]
path = "../git-ext"

[dependencies.git2]
version = ">= 0.13.23"
default-features = false
features = []

